--- a/_config.yml
+++ b/_config.yml
@@ -6,26 +6,26 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Nikhil Kandukuri
+title: MIIS Graduate Student at Carnegie Mellon University
+email: nikhilkandukuri@cmu.edu
+website: https://nk660x.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+# twitter_username: facespics
+# github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+# instagram_username: jameswgrant
+linkedin_username: nikhilkandukuri
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
@@ -57,35 +57,67 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+        title: Research Project UC San Diego
+        # link: github.com/sproogen
         # link_text: Project Website
         additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
+          - title:  Neural Architecture Search for Skin Cancer Detection 
+            # icon: fab fa-github
+            url: https://www.researchgate.net/publication/355292507_Neural_Architecture_Search_For_Skin_Cancer_Detection
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+        # quote: >
+        #   This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
+          Enhanced diagnosis of early stages of skin cancer using the method of Neural Architecture Search (NAS), improved by the technique of Learning by Passing Tests (LPT) to improve accuracy by close to 1%
+          The experiments consisted of two models, a teacher model, and a learner model, mirroring processes occurring in human learning
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: Deutsche Bank
+        # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        sub_title: Senior Analyst
+        caption: July 2021 - June 2023
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
+            • Played a key role in the development team that built the Cash Settlement Engine' product for the Investment
+            Banking Division
+            • The project's aim was to replace existing five monolithic settlement systems with a modernistic cloud hosted
+            micro-service based architecture acting as a unified settlement system across various products
+            • Cash Settlement Engine will save 5 million euros annually by decommissioning current vendor products
+            • Implemented key software strategies including Domain Driven Design, Event Driven Architecture, and Test Driven
+            Development with code coverage exceeding 80%, and Behavior Driven Development with a 100% Passing Serenity BDD report
+    content:
+      - layout: left
+        title: Samsung Research Institute
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: Associate
+        caption: Jan 2021 - June 2021
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            • Worked in the Voice Intelligence R&D team focused on Automatic Speech Recognition.
+            • The outcome of the project was to enhance end to end Automatic Speech Recognition systems using data augmentation
+            techniques.
+            • Worked with a variety of NLP frameworks related to speech recognition, synthesis, sampling, filtering and translation
+    content:
+      - layout: left
+        title: Western Digital
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: Intern
+        caption: May 2020 - July 2020
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            • At Western Digital I worked with the Firmware group in the RPG(Removable Product Group) department. The project was based in Data Analytics.
+            • The teams used .map files for observing patterns in the firmware. However, many crucial components were being looked at manually leading to inefficiencies in performance.
+            • The tool I developed parsed data from these files and converted them into a ubiquitous format, supporting SQL queries.
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
