--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ darkmode: false
 
 # Social links
 # twitter_username: facespics
-# github_username:  sproogen
+github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-linkedin_username: nikhil-kandukuri-b78487202
+# linkedin_username: nikhil-kandukuri-b78487202
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
@@ -61,7 +61,7 @@ content:
         sub_title: Neural Architecture Search for Skin Cancer Detection
         # link: github.com/sproogen
         # link_text: Project Website
-        additional_links:
+        # additional_links:
           # - title:  Neural Architecture Search for Skin Cancer Detection 
             # icon: fab fa-github
             # url: https://www.researchgate.net/publication/355292507_Neural_Architecture_Search_For_Skin_Cancer_Detection
