--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.heic
+about_profile_image: images/profilepic.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
@@ -126,11 +126,11 @@ content:
         title: Carnegie Mellon University
         caption: Aug 2023 - Dec 2024
         sub_title: Master of Science in Intelligent Information Systems
-    #  - layout: middle
-    #     title: BITS Pilani
-    #     caption: Aug 2017 - Jul 2021
-    #     sub_title: Bachelor of Engineering in Electrical and Electronics Engineering
-    #     description:  CGPA - 9.29/10
+     - layout: top-middle
+        title: BITS Pilani
+        caption: Aug 2017 - Jul 2021
+        sub_title: Bachelor of Engineering in Electrical and Electronics Engineering
+        description:  CGPA - 9.29/10
         # sub_title:  Minor in Data Science
         # description:  CGPA - 9/10
         # quote: >
