--- a/_config.yml
+++ b/_config.yml
@@ -126,10 +126,10 @@ content:
         title: Carnegie Mellon University
         caption: Aug 2023 - Dec 2024
         sub_title: Master of Science in Intelligent Information Systems
-     - layout: top-middle
-        title: BITS Pilani
-        caption: Aug 2017 - Jul 2021
-        sub_title: Bachelor of Engineering in Electrical and Electronics Engineering
+    #  - layout: top-middle
+    #     title: BITS Pilani
+    #     caption: Aug 2017 - Jul 2021
+    #     sub_title: Bachelor of Engineering in Electrical and Electronics Engineering
         # description:  CGPA - 9.29/10
         # sub_title:  Minor in Data Science
         # description:  CGPA - 9/10
