Added CMU Twice

--- a/_config.yml
+++ b/_config.yml
@@ -126,6 +126,10 @@ content:
         title: Carnegie Mellon University
         caption: Aug 2023 - Dec 2024
         sub_title: Master of Science in Intelligent Information Systems
+      - layout: top-middle
+        title: Carnegie Mellon University
+        caption: Aug 2023 - Dec 2024
+        sub_title: Master of Science in Intelligent Information Systems        
     #  - layout: top-middle
     #     title: BITS Pilani
     #     caption: Aug 2017 - Jul 2021
