--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profilepic.jpg
+about_profile_image: images/test.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
@@ -127,9 +127,9 @@ content:
         caption: Aug 2023 - Dec 2024
         sub_title: Master of Science in Intelligent Information Systems
       - layout: top-middle
-        title: Carnegie Mellon University
-        caption: Aug 2023 - Dec 2024
-        sub_title: Master of Science in Intelligent Information Systems        
+        title: BITS Pilani
+        caption: Aug 2017 - Jul 2021
+        sub_title: Bachelors of Engineering in Electrical and Electronics Engineering        
     #  - layout: top-middle
     #     title: BITS Pilani
     #     caption: Aug 2017 - Jul 2021
