--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,8 @@ content:
         title: BITS Pilani
         caption: Aug 2017 - Jul 2021
         sub_title: Bachelors of Engineering in Electrical and Electronics Engineering
-        caption: CGPA - 9.29/10  
+        description: |
+         CGPA - 9.29/10  
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
@@ -148,22 +149,22 @@ content:
           The experiments consisted of two models, a teacher model, and a learner model, mirroring processes occurring in human learning
   
   
-  - title: Awards and Acievements
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Academic Merit Scholarship: Received scholarship for four semesters during my Undergraduate Degree, awarded based on GPA to the top performing 3% of the undergraduate cohort of close to 1100 students
-      Concours Romain Rolland: Third Rank All India under the B1 category (French Olympiad)
-      Deutsche Bank Global Hackathon: Declared as the best team from India for building an application promoting mental health
-      Deutsche Bank Recognition Award: Awarded the DBRecognition award for the first quarter of 2023 for migrating the Cash Settlement Engine from development to User Acceptance Testing (UAT).
+#   - title: Awards and Acievements
+#     layout: text
+#     content: | # this will include new lines to allow paragraphs
+#       Academic Merit Scholarship: Received scholarship for four semesters during my Undergraduate Degree, awarded based on GPA to the top performing 3% of the undergraduate cohort of close to 1100 students
+#       Concours Romain Rolland: Third Rank All India under the B1 category (French Olympiad)
+#       Deutsche Bank Global Hackathon: Declared as the best team from India for building an application promoting mental health
+#       Deutsche Bank Recognition Award: Awarded the DBRecognition award for the first quarter of 2023 for migrating the Cash Settlement Engine from development to User Acceptance Testing (UAT).
 
-- title: Techincal Skills and Courses
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-        OS: Windows, Linux
-        Programming Languages: Python, Java, C++, C
-        Libraries: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
-        Subjects: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
-        Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods Languages: English, Telugu, Hindi, French
+# - title: Techincal Skills and Courses
+#     layout: text
+#     content: | # this will include new lines to allow paragraphs
+#         OS: Windows, Linux
+#         Programming Languages: Python, Java, C++, C
+#         Libraries: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
+#         Subjects: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
+#         Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods Languages: English, Telugu, Hindi, French
 
 # Footer
 footer_show_references: true
