--- a/_config.yml
+++ b/_config.yml
@@ -142,25 +142,25 @@ content:
   - title: Awards and Acievements
     layout: text
     content: | # this will include new lines to allow paragraphs
-      <mark>Academic Merit Scholarship<\mark>: Received scholarship for four semesters during my Undergraduate Degree, awarded based on GPA to the top performing 3% of the undergraduate cohort of close to 1100 students
+      <mark>Academic Merit Scholarship</mark>: Received scholarship for four semesters during my Undergraduate Degree, awarded based on GPA to the top performing 3% of the undergraduate cohort of close to 1100 students
       
-      <mark>Concours Romain Rolland<\mark>: Third Rank All India under the B1 category (French Olympiad)
+      <mark>Concours Romain Rolland</mark>: Third Rank All India under the B1 category (French Olympiad)
       
-      <mark>Deutsche Bank Global Hackathon<\mark>: Declared as the best team from India for building an application promoting mental health
+      <mark>Deutsche Bank Global Hackathon</mark>: Declared as the best team from India for building an application promoting mental health
       
-      <mark>Deutsche Bank Recognition Award<\mark>: Awarded the DBRecognition award for the first quarter of 2023 for migrating the Cash Settlement Engine from development to User Acceptance Testing (UAT).
+      <mark>Deutsche Bank Recognition Award</mark>: Awarded the DBRecognition award for the first quarter of 2023 for migrating the Cash Settlement Engine from development to User Acceptance Testing (UAT).
 
 
   - title: Technical Skills and Courses
     layout: text
     content: | # this will include new lines to allow paragraphs
-      <mark>OS<\mark>: Windows, Linux
+      <mark>OS</mark>: Windows, Linux
 
-      <mark>Programming Languages<\mark>: Python, Java, C++, C
+      <mark>Programming Languages</mark>: Python, Java, C++, C
 
-      <mark>Libraries<\mark>: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
+      <mark>Libraries</mark>: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
 
-      <mark>ubjects<\mark>: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
+      <mark>ubjects</mark>: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
       Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods Languages: English, Telugu, Hindi, French
   # - title: Awards and Acievements
   #     layout: text
