--- a/_config.yml
+++ b/_config.yml
@@ -10,23 +10,13 @@ name: Nikhil Kandukuri
 title: MIIS Graduate Student at Carnegie Mellon University
 email: nikhilkandukuri@cmu.edu
 website: https://nk660x.github.io/
+mobile: +1 (878)-834-9329
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-# twitter_username: facespics
-# github_username:  sproogen
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-# instagram_username: jameswgrant
 linkedin_username: nikhil-kandukuri-b78487202
-# xing_username: jekyll
-# pinterest_username: jekyll
-# youtube_username: globalmtb
-# googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
