--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,9 @@ content:
       <mark>Libraries</mark>: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
 
       <mark>Subjects</mark>: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
-      Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods Languages: English, Telugu, Hindi, French
+      Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods 
+      
+      <mark>Languages</mark>: English, Telugu, Hindi, French
   # - title: Awards and Acievements
   #     layout: text
   #     content: | # this will include new lines to allow paragraphs
