Edited Webpage Name

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Nikhil Kandukuri
 title: MIIS Graduate Student at Carnegie Mellon University
 email: nikhilkandukuri@cmu.edu
 mobile: +1 (878)-834-9329
-website: https://nk660x.github.io/
+website: https://nikhil-kandukuri.github.io/
 
 
 # Dark Mode (true/false/never)
