--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,9 @@ content:
 
       <mark>Programming Languages</mark>: Python, Java, C++, C
 
-      <mark>Libraries</mark>: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras
+      <mark>Libraries</mark>: Gensim, OpenCV, TensorFLow, Kaldi, Espnet, Scipy, Scikit, Keras, Pytorch
+
+      <mark>Skills</mark>: CI/CD , Kubernetes, gRPC , Test Driven Development, SQL, PostgreSQL, Google Pub/Sub , Agile, Event Driven Architecture, Debezium
 
       <mark>Subjects</mark>: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
       Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods 
