--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Nikhil Kandukuri
-title: MIIS Graduate Student at Carnegie Mellon University
+title: MS CS (IIS) Graduate Student at Carnegie Mellon University
 email: nikhilkandukuri@cmu.edu
 mobile: +1 (878)-834-9329
 website: https://nikhil-kandukuri.github.io/
@@ -41,6 +41,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   Interned at MNCs like Samsung Research and Western Digital where I applied my skills of academia in some enriching projects centred around Bixby ( Samsung's Voice Assistant) and the new generation of flash drives.
 
+  I am currently pursuing research in the space of event temporal extraction using LLMs. Have made a paper submission to NAACL 2024 as a co-author. 
   Excited to explore further in the field of Mahcine Learning and Natural Language Processing!
 
 content:
@@ -132,7 +133,28 @@ content:
           The experiments consisted of two models, a teacher model, and a learner model, mirroring processes occurring in human learning
 
           [Link to Preprint](https://www.researchgate.net/publication/355292507_Neural_Architecture_Search_For_Skin_Cancer_Detection)
-  
+    - layout: top-middle
+        title: Research Project Carnegie Mellon University
+        sub_title: Event Temporal Ordering using LLMs 
+        # link: github.com/sproogen
+        # link_text: Project Website
+        # quote: >
+      
+        description: | # this will include new lines to allow paragraphs
+          Directed benchmarking Large Language Models (LLMs) on event ordering temporal tasks for four 
+          existing datasets through prompt engineering and evaluated performance models encompassing LLaMa (7B,13B,70B) , 
+          Flan-T5(3B,XL,XXL)
+    - layout: top-middle
+        title: Research Project Carnegie Mellon University
+        sub_title: Text Injection for Automatic Speech Recognition (ASR) 
+        # link: github.com/sproogen
+        # link_text: Project Website
+        # quote: >
+      
+        description: | # this will include new lines to allow paragraphs
+          Experimented bolstering ASR performance through representative alignment of text and speech 
+          upsampling text by a factor of 4 using contrastive loss a predominant technique in multimodal research
+          
   - title: Awards and Acievements
     layout: text
     content: | # this will include new lines to allow paragraphs
