--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ darkmode: false
 # Social links
 linkedin_username: nikhil-kandukuri-b78487202
 # orcid_username: 0000-0000-0000-0000
+github: Nikhil-Kandukuri 
 
 # Additional icon links
 # - title: another link
