--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ content:
       - layout: top-middle
         title: Carnegie Mellon University
         caption: Aug 2023 - Dec 2024
-        sub_title: Master of Science in Intelligent Information Systems
+        sub_title: Master of Science in Computer Science (IIS)
       - layout: top-middle
         title: BITS Pilani
         caption: Aug 2017 - Jul 2021 (CGPA - 9.29/10)
