--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ content:
       <mark>Skills</mark>: CI/CD , Kubernetes, gRPC , Test Driven Development, SQL, PostgreSQL, Google Pub/Sub , Agile, Event Driven Architecture, Debezium
 
       <mark>Subjects</mark>: Machine Learning, Artificial Intelligence, Neural Networks and Fuzzy Logic, Python Programming, Information Retrieval, Foundations of Data Science, Data Structures and Algorithms, C programming, Probability and Statistics, Operating Systems
-      Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods 
+      Object Oriented Programming, Digital Design, Optimization, Applied Statistical Methods, Generative AI, Multimodal Machine Learning, MLOps, Advanced Natural Language Processing, Speech Recognition and Understanding
       
       <mark>Languages</mark>: English, Telugu, Hindi, French
   # - title: Awards and Acievements
