--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ website: https://nikhil-kandukuri.github.io/
 darkmode: false
 
 # Social links
-linkedin_username: nikhil-kandukuri-b78487202
+# linkedin_username: nikhil-kandukuri-b78487202
 # orcid_username: 0000-0000-0000-0000
 github_username: Nikhil-Kandukuri 
 
